2009-Jun-04  yselkowitz

	* bin/cygport.in (__prepuac): New internal function to create side-by-side
	.manifest files for apps whose names trigger UAC.
	(__src_postinst): Call it.
	* data/Makefile.am:
	* data/uac-manifest.in: Add manifest template for it.

	* bin/cygport.in (__prepvargames): New internal function to run
	make_etc_defaults on scores files in /var/games.
	(__src_postinst): Call it.

	* bin/cygport.in (__prepman): Fix ncurses manpage postinstall:
	http://cygwin.com/ml/cygwin/2009-03/msg00987.html

	* bin/cygport.in (cygpatch): Fix .cygwin.patch application where
	SRC_DIR is deep: http://www.cygwin.com/ml/cygwin/2009-05/msg00281.html

	* bin/cygport.in: Set LDFLAGS default to "-Wl,--enable-auto-import".
	Set MAKEOPTS to number_of_cores + 1 even on multicore systems.
	* data/cygport.conf: Ditto, and document it.

	* bin/cygport.in (__config_equals, __config_get, __config_set):
	New internal functions for saving information across stages.
	(__src_prep): Use them to declare cygport_version.
	(__pkg_diff): Use them to detect gettext usage.
	* lib/autotools.cygclass (cygautoreconf): Use them to declare gettext and
	libtool usage.  If libtool is being used, force current gettext usage.
	* lib/gnome2.cygclass (gnome2_autoreconf): Fix packages that use intltool
	w/o glib-gettext.  Declare gettext usage.

	* lib/kde4.cygclass: Drop support for phonon tarballs; KDE now uses the
	phonon (4.3.1) provided by Qt 4.5.
	(kde4_compile): Disable gcc4 visibility (not supported on PE/COFF).

2009-May-05  yselkowitz

	* lib/ggz.cygclass: Refactor and simplify.

	* lib/kde3.cygclass (kde3_compile): -fvisibility is not supported
	on PE/COFF platforms, even with gcc-4.

	* lib/kde4.cygclass (kde4_compile): --enable-auto-import is now
	defined globally.
	* lib/qt4-cmake.cygclass (qt4_cmake_compile): Ditto.

2009-May-03  yselkowitz

	* lib/qt3.cygclass: --enable-auto-import is now defined globally.

	* lib/gst-plugins0.10.cygclass: twolame moved from -bad to -ugly.
