@@ -2008,7 +2008,7 @@ readonly -f __pkg_binpkg __pkg_diff __gpg_sign __pkg_srcpkg __pkg_dist __finish
 #	CPPFLAGS
 #	CXXFLAGS
 #	CYGPORT_DEPEND
-#	F77FLAGS
+#	FFLAGS
 #	GCJFLAGS
 #	LDFLAGS
 #	MAKEOPTS
@@ -2068,10 +2068,16 @@ export -f inherit inherited
 readonly -f inherit inherited
 
 # Values which can be overridden either system-wide or per package
+declare -x CC="gcc";
 declare -x CFLAGS="-O2 -pipe ";
+declare -x CPP="cpp";
 declare -x CPPFLAGS="";
+declare -x CXX="g++";
+declare -x CXXCPP="cpp";
 declare -x CXXFLAGS="${CFLAGS}";
+declare -x F77="g77";
 declare -x FFLAGS="${CFLAGS}";
+declare -x GCJ="gcj";
 declare -x GCJFLAGS="${CFLAGS}";
 declare -x LDFLAGS="-Wl,--enable-auto-import ";
 declare -x LIBS="";
