@@ -46,10 +46,13 @@ cygcmake() {
 		${cmdir} \
 		-DCMAKE_BINARY_DIR=. \
 		-DCMAKE_BUILD_TYPE=Release \
-		-DCMAKE_C_COMPILER=$(type -P gcc) \
+		-DCMAKE_C_COMPILER=$(type -P ${CC}) \
 		-DCMAKE_C_FLAGS="${CFLAGS}" \
-		-DCMAKE_CXX_COMPILER=$(type -P g++) \
+		-DCMAKE_CXX_COMPILER=$(type -P ${CXX}) \
 		-DCMAKE_CXX_FLAGS="${CXXFLAGS}" \
+		-DCMAKE_EXE_LINKER_FLAGS="${LDFLAGS}" \
+		-DCMAKE_MODULE_LINKER_FLAGS="${LDFLAGS}" \
+		-DCMAKE_SHARED_LINKER_FLAGS="${LDFLAGS}" \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		"${@}" \
 		${CYGCMAKE_ARGS} \
